--- a/Notebooks/Ds_em_producao_02_feature_engineering.ipynb
+++ b/Notebooks/Ds_em_producao_02_feature_engineering.ipynb
@@ -422,6 +422,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "**h01: Stores with larger staffs sell more(x)**\n",
+    "\n",
+    "**h02: Stores with higher stock should sell more(x)**\n",
+    "\n",
+    "**h03: Larger stores should sell more(v)**\n",
+    "\n",
+    "**h04: Stores with more employees should sell more(x)**\n",
+    "\n",
+    "**h05: Stores with more distant competitors should sell more(v)**\n",
+    "\n",
+    "**h06: Stores with more \"assortment\" should sell more(v)**\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Product hypotheses"
    ]
   },
@@ -436,7 +453,7 @@
    "source": [
     "**h07: Lojas que investem mais em marketing deveriam vender mais(x)**\n",
     "\n",
-    "**h08: lojas que tem maior exposição na vitrine deveriam vender mais(x)**\n",
+    "**h08: Lojas que tem maior exposição na vitrine deveriam vender mais(x)**\n",
     "\n",
     "**h09: Lojas que tem preços menores nos produtos deveriam vender mais(x)**\n",
     "\n",
@@ -449,6 +466,34 @@
     "**h13: Lojas deveriam vender menos durante os feriados escolares(v)**\n",
     "\n",
     "**h13: Lojas com mais promoções deveriam vender mais(v)**\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-06-24T23:15:23.387427Z",
+     "start_time": "2022-06-24T23:15:23.380444Z"
+    }
+   },
+   "source": [
+    "**h07: Stores that invest more in marketing should sell more(x)**\n",
+    "\n",
+    "**h08: Stores that have more window display should sell more(x)**\n",
+    "\n",
+    "**h09: Stores that have lower prices on products should sell more(x)**\n",
+    "\n",
+    "**h10: Stores that have lower prices should sell more(x)**\n",
+    "\n",
+    "**h11: Stores with longer promotions should sell more(v)**\n",
+    "\n",
+    "**h12: Stores with more promotion days should sell more(v)**\n",
+    "\n",
+    "**h13: Stores should sell less during school holidays(v)**\n",
+    "\n",
+    "**h13: Stores with more promotions should sell more(v)**\n",
     "\n",
     "\n"
    ]
@@ -468,7 +513,7 @@
     "\n",
     "**h15: Lojas que abrem nos primeiros 6 meses deveriam vender mais(v)**\n",
     "\n",
-    "**h16: Lojas que abrem nos finais de semanas deveriam veender mais(v)**\n",
+    "**h16: Lojas que abrem nos finais de semanas deveriam vender mais(v)**\n",
     "\n",
     "**h17: Lojas vendem mais no inverno(v)**\n",
     "\n",
@@ -476,7 +521,30 @@
     "\n",
     "**h19: Lojas deveriam vender mais ao longo dos anos(v)**\n",
     "\n",
-    "**h20: Lojas deveriam vender mais depois do dia 10 de cada mês(v)**\n"
+    "**h20: Lojas deveriam vender mais depois do dia 10 de cada mês(v)**\n",
+    "\n",
+    "**h21: Lojas com competidores a mais tempo deveriam vender mais(v)**\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**h14: Stores that have more holidays should sell less(v)**\n",
+    "\n",
+    "**h15: Stores that open in the first 6 months should sell more(v)**\n",
+    "\n",
+    "**h16: Stores that open on weekends should sell more(v)**\n",
+    "\n",
+    "**h17: Stores sell more in winter(v)**\n",
+    "\n",
+    "**h18: Stores open during Christmas should sell more(v)**\n",
+    "\n",
+    "**h19: Stores should sell more over the years(v)**\n",
+    "\n",
+    "**h20: Stores should sell more after the 10th of each month(v)**\n",
+    "\n",
+    "**h21: Stores with longer competitors should sell more(v)**"
    ]
   },
   {
