--- a/Notebooks/Ds_em_producao_05_feature_selection.ipynb
+++ b/Notebooks/Ds_em_producao_05_feature_selection.ipynb
@@ -591,7 +591,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Columnas com maior relevância selecionadas pelo modelo**"
+    "**Colunas com maior relevância selecionadas pelo modelo**"
    ]
   },
   {
