--- a/Notebooks/Ds_em_producao_06_machine_learning.ipynb
+++ b/Notebooks/Ds_em_producao_06_machine_learning.ipynb
@@ -2067,7 +2067,7 @@
    ],
    "source": [
     "df8_d = df8_a[['predictions', 'worst_scenario','best_scenario']].apply(lambda x:np.sum(x),axis=0).reset_index().rename({'index':'scenarios',0:'values'},axis=1)\n",
-    "df8_d['values'] = df8_d['values'].map('R$ {:,.2f}'.format)\n",
+    "df8_d['values'] = df8_d['values'].map('{:,.2f} €'.format)\n",
     "df8_d"
    ]
   },
